# xburst-tools

./: .gitignore  .gitmodules  COPYING  ChangLog  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.firmware  boot.cfg  configure.ac  debug.c  debug.h  dump.scr  ingenic.c  ingenic.h  initial.cfg  main.c  shell.c  shell.h  shell_builtins.c  shell_internal.h  shell_lex.c  shell_lex.l  spl_cmdset.c  usbboot_cmdset.c  usbdev.c  usbdev.h
config/: boot.cfg  initial.cfg
debian/: README.source  changelog  control  copyright  get-orig-source.sh  rules  watch
jzboot/: .gitignore
jzboot/src/: Makefile.am  config.c  debug.c  ingenic.c  shell.c  shell_builtins.c  usbboot_cmdset.c
script/: flash_xz0032_linux.scr  restore_minios.scr
src/: Makefile  Makefile.am  ingenic.c  main.c  shell.c  spl_cmdset.c  usbboot_cmdset.c
usbboot/: README.usbboot
usbboot/doc/: usbboot.1  usbboot.cfg  usbboot.cfg.lepus
usbboot/src/: .gitignore  Makefile.am  cmd.c  cmd.h  command_line.c  command_line.h  ingenic_cfg.c  ingenic_cfg.h  ingenic_request.h  ingenic_usb.c  ingenic_usb.h  main.c  mem.c  mem.h  nand.c  nand.h  server.c  usb_boot_defines.h
usbboot/xburst_include/: usb_boot.h
usbboot/xburst_include/usb/: udc.h  usb.h
usbboot/xburst_stage1/: Makefile  board-jz4740.c  board-jz4760.c  board_4740.c  board_4750.c  common.c  debug.c  head.S  main.c
usbboot/xburst_stage2/: Makefile  boothandler.c  main.c  nandflash_4740.c  nandflash_4750.c  nandflash_4760.c  serial.c  udc.c
xbboot/doc/: xbboot.1
xbboot/host-app/: .gitignore  Makefile.am  host_main.c
xbboot/target-common/: serial.c
xbboot/target-stage1/: Makefile  board-jz4740.c  board-jz4760.c  board-jz4760.h  stage1.c
